figured out how to click on image to show audio, but shows all audio. Need to fix it so it can only show the one that corresponds to the image

--- a/bible-app/styles/globals.css
+++ b/bible-app/styles/globals.css
@@ -304,7 +304,7 @@ display: flex;
 width: 100%;
 overflow: auto;
 height: 100px;
-position: fixed;
+/* position: fixed; */
 border: solid;
 margin-top: 500px;
 background-color: white;
