--- a/bible-app/styles/globals.css
+++ b/bible-app/styles/globals.css
@@ -280,7 +280,8 @@ position: relative;
 }
 
  #musicImage{
-  width: 200px;
+  width: 250px;
+  display: flex;
   height: 200px;
  }
 
@@ -299,30 +300,33 @@ position: relative;
   width: 400px;
   height: 300px;
   display: block;
-  margin: 0px;
-
+  margin: 10px;
+background-color: white ;
+mix-blend-mode:hard-light;
+opacity: 0.7;
+border-radius: 20px;
   position: fixed;
   overflow: scroll;
   overflow-x: hidden;
  }
  #text{
-  color: white;
+  color: black;
   margin: 20px;
   width: 200px;
   height: 200px;
-  
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+font-weight: bolder;
 
  }
 
  .bibleBox{
  display: block;
+
  }
 
  .audioContainer{
 display: block;
 display: flex;
-width: 100%;
+width: 200px;
 overflow: auto;
 height: 100px;
 /* position: fixed; */
